--- a/primerProyecto/miApp/templates/layout.html
+++ b/primerProyecto/miApp/templates/layout.html
@@ -49,6 +49,9 @@
                 <li>
                     <a href={%url 'contacto' %}>Contacto</a>
                 </li>
+                <li>
+                    <a href={%url 'Listar' %}>Listar Articulos</a>
+                </li>
             </ul>
         </div>
     </nav>
